# avro_to_arrow

./: .gitignore  Cargo.toml  README.md  avro_to_arrow-0.1.0-cp38-abi3-manylinux_2_34_x86_64.whl  memray-flamegraph-test_avro_to_arrow.py.500220.html  memray-flamegraph-test_fast_avro.py.500586.html  memray-flamegraph-test_parquet.py.503013.html  requirements.txt  test_avro_to_arrow.py  test_create_data.py  test_fast_avro.py  test_lib.py  test_parquet.py
src/: _old_main.rs  avro_utils.rs  avro_writer.rs  lib.rs
tests/static/: data.avro
